--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/VictoriaTatarinova/7.2.-Node.js/issues"
   },
-  "homepage": "https://github.com/VictoriaTatarinova/7.2.-Node.js#readme"
+  "homepage": "https://github.com/VictoriaTatarinova/7.2.-Node.js#readme",
+  "dependencies": {
+    "eslint": "^8.27.0",
+    "prettier": "^2.7.1"
+  }
 }
