--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "7.2.-node",
   "version": "1.0.0",
-  "description": "",
+  "description": "Test project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/VictoriaTatarinova/7.2.-Node.js.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Victoria",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/VictoriaTatarinova/7.2.-Node.js/issues"
